
[metadata]
name = imptools
author = Michael Fagan
author_email = michael.charles.fagan@gmail.com
license = Apache 2.0
description = development tools
keywords = development
url = https://github.com/badmonkey/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3.8
    Private :: Do Not Upload to pypi server

[options]
versioning=dev
python_requires = >=3.9
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    atpublic
    click
    pygit2
    prompt_toolkit
    pluginlib

[options.extras_require]
dev =
    pipdeptree
    pylama
    black
    isort
    pylint
    mccabe
    pyflakes
    mypy
    hypothesis

audit =
    pip-audit

[options.entry_points]
console_scripts =
    ape = imptools.imp:init

imp.before_commit =
    commit_format = imptools.imp:init

[bdist_wheel]
universal = 0

[mypy]
follow_imports = skip
ignore_missing_imports = True
warn_incomplete_stub = False

[isort]
line_length=100
multi_line_output=3
include_trailing_comma=true

[pylama]
format = pylint
skip = .eggs/*,tmp/*,docs/*,tests/*
linters = pyflakes,mccabe,pylint,mypy
ignore = W1201,W1202,W1203

#
# C0111 missing docstring
# C0301 line too long
# C0330 wrong hanging indentation
# C0412 imports are not grouped
# C0414 useless import alias
# W0603 using the global statement
# W1201 specify logging format as parameters
# W1202 use logging parameters instead of % formatting
# W1203 use logging parameters instead of f-string formatting
# R0201 Method could be a function
#

[pylama:pyflakes]
builtins = _,public,private

[pylama:pylint]
max_line_length = 100
dummy-variables-rgx = _.*
additional-builtins = public,private

[tool:pytest]
testpaths = tests
